--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/i18n": "^7.0.3",
     "@nuxtjs/pwa": "^3.3.5",
+    "apexcharts": "^3.33.0",
     "apollo-cache-inmemory": "^1.6.6",
     "breakpoint-sass": "^2.7.1",
     "core-js": "^3.15.1",
@@ -48,6 +49,7 @@
     "signature_pad": "^3.0.0-beta.4",
     "sonarqube-scanner": "^2.8.1",
     "uuid": "^8.3.2",
+    "vue-apexcharts": "^1.6.2",
     "vue-clipboard2": "^0.3.1",
     "vue-html2pdf": "^1.8.0",
     "vue-qrcode-reader": "^3.0.3",
