removed unwanted things.

--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,2 @@
-OAUTH_ISSUER=
-SCOPE=
-CLIENT_ID=
-API_BASE_URL=http://localhost:8080
-WS_BASE_URL=ws://localhost:8080
 APPINSIGHTS_INSTRUMENTATION_KEY=26f4eb99-0642-4b41-b4d4-badc78817d1c
-APP_ID_REALM=12331231
+WS_BASE_URL=ws://peerislandsexchange.azurewebsites.net/exchange
