--- a/.env.prod
+++ b/.env.prod
@@ -1,2 +1,2 @@
 APPINSIGHTS_INSTRUMENTATION_KEY=26f4eb99-0642-4b41-b4d4-badc78817d1c
-WS_BASE_URL=ws://peerislandsexchange.azurewebsites.net/exchange
+WS_BASE_URL=https://peerislandsexchange.azurewebsites.net/exchange
